<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot"
        android:id="@+id/textViewHot1"
        style="@style/MyTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot1"
        android:id="@+id/textView2"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ff4c67"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/min1"
            android:id="@+id/checkBox"
            android:checked="true" />

        <CheckBox
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/min2"
            android:id="@+id/checkBox2"
            android:checked="false" />

        <CheckBox
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/min3"
            android:id="@+id/checkBox3"
            android:checked="false" />

        <CheckBox
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/min4"
            android:id="@+id/checkBox4"
            android:checked="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot2"
        android:id="@+id/textView3"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ff4c67"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but11"
            android:id="@+id/button"
            style="@style/MyButtonStyle"
            android:layout_weight="0.35"
            android:clickable="true"
            android:elegantTextHeight="false"
            android:focusable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but12"
            android:id="@+id/button3"
            style="@style/MyButtonStyle"
            android:layout_weight="0.35"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but13"
            android:id="@+id/button2"
            style="@style/MyButtonStyle"
            android:layout_weight="0.30"
            android:clickable="true" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot3"
        android:id="@+id/textView4"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ff4c67"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:rating="3" />

</LinearLayout>