<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waters"
        android:id="@+id/textViewLight1"
        style="@style/MyTextViewStyle"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but1"
        android:id="@+id/buttonWater"
        style="@style/MyButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water"
        android:background="#FF00FF"
        android:id="@+id/textViewWater"
        style="@style/MyTextViewStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>