<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"

            android:text="@string/name"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginTop="15dp"
            android:text="@string/time"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginTop="15dp"
            android:text="@string/level"
            android:id="@+id/textView7" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginTop="15dp"
            android:text="Описание"
            android:id="@+id/textViewDesc" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginTop="25dp"
            android:text="Категория"
            android:id="@+id/textView8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginTop="15dp"
            android:text="Кухня"
            android:id="@+id/textView9" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNameLight" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTimeLight" />

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLevelLight" />
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDescLight" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/spinner"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/spinnerKit"/>
     </LinearLayout>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonAddLight"
        style="@style/MyButtonStyle"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="click"/>
</LinearLayout>