<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="53dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainWindow"
            android:layout_margin="5dp"
            android:text="@string/name"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainWindow"
            android:layout_margin="5dp"
            android:text="@string/time"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainWindow"
            android:layout_margin="5dp"
            android:text="@string/level"
            android:id="@+id/textView10" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyTextViewStyle2"
                android:id="@+id/textViewNameLight" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                style="@style/MyTextViewStyle2"
                android:id="@+id/textViewTimeCookLight" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextViewStyle2"
            android:layout_marginLeft="15dp"
            android:id="@+id/textViewLevelLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textViewKit" />

    </LinearLayout>

</LinearLayout>